<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Tour Guide App</string>
    <string name="more">View more</string>
    <string name="city1_name">Buenos Aires</string>
    <string name="city1_country">Argentina</string>
    <string name="city1_population">14,902,908</string>
    <string name="city1_description">Buenos Aires, is Argentina’s big, cosmopolitan capital city.
        Its center is the Plaza de Mayo, lined with stately 19th-century buildings including Casa
        Rosada, the iconic, balconied presidential palace. Other major attractions include Teatro
        Colón, a grand 1908 opera house with nearly 2,500 seats, and the modern MALBA museum,
        displaying Latin American art.</string>
    <string name="city1_history">The city of Buenos Aires was founded twice. It was first founded in
        1536 by an expedition led by the Spaniard Pedro de Mendoza, who named it Nuestra Señora
        Santa María del Buen Aire (“Our Lady St. Mary of the Good Air”). He was made the first
        governor-general of the Río de la Plata region.</string>
    <string name="city1_language">Spanish</string>
    <string-array name="city1_info">
        <item>@string/city1_name</item>
        <item>@string/city1_country</item>
        <item>@string/city1_population</item>
        <item>@string/city1_description</item>
        <item>@string/city1_history</item>
        <item>@string/city1_language</item>
    </string-array>
    <string name="city1_restaurant1_name">Sarkis</string>
    <string name="city1_restaurant1_phone">+54&#8211;11&#8211;4772&#8211;4991</string>
    <string name="city1_restaurant1_price">2.2</string>
    <string name="city1_restaurant1_rating">4.5</string>
    <string name="city1_restaurant1_michelin_stars">0</string>
    <string name="city1_restaurant1_address">Thames 1101, 1414 Villa Crespo, Distrito Federal</string>
    <string name="city1_restaurant1_neighbourhood">Villa Crespo</string>
    <string name="city1_restaurant1_website">https://www.facebook.com/pages/Sarkis/156339884415152</string>
    <string name="city1_restaurant1_description">Sarkis is one of the most popular restaurants in Buenos
        Aires. Sarkis offer Middle Eastern cuisine of a high quality at very reasonable prices. The
        results, however are long waiting times for a seat. Once you get a table though, you will
        not be disappointed.</string>
    <string name="city1_restaurant1_opening_hours">
        Mon &#8211; Sun 12:00 &#8211; 15:00\nMon &#8211; Sun 20:00 &#8211; 01:00
    </string>
    <string name="city1_restaurant1_dining_hours">@string/city1_restaurant1_opening_hours</string>
    <string name="city1_restaurant1_cuisines">Lebanese|Armenian|Middle Eastern|Eastern European</string>
    <string-array name="city1_restaurant1_info">
        <item>@string/city1_restaurant1_name</item>
        <item>@string/city1_restaurant1_phone</item>
        <item>@string/city1_restaurant1_price</item>
        <item>@string/city1_restaurant1_rating</item>
        <item>@string/city1_restaurant1_michelin_stars</item>
        <item>@string/city1_restaurant1_address</item>
        <item>@string/city1_restaurant1_neighbourhood</item>
        <item>@string/city1_restaurant1_website</item>
        <item>@string/city1_restaurant1_description</item>
        <item>@string/city1_restaurant1_opening_hours</item>
        <item>@string/city1_restaurant1_dining_hours</item>
        <item>@string/city1_restaurant1_cuisines</item>
    </string-array>
    <string name="city1_restaurant2_name">Hola Jacoba</string>
    <string name="city1_restaurant2_phone">+54&#8211;11&#8211;4833&#8211;5858</string>
    <string name="city1_restaurant2_price">3.9</string>
    <string name="city1_restaurant2_rating">4.5</string>
    <string name="city1_restaurant2_michelin_stars">0</string>
    <string name="city1_restaurant2_address">Thames 1801, 1414 Palermo Soho, Distrito Federal</string>
    <string name="city1_restaurant2_neighbourhood">Palermo Soho</string>
    <string name="city1_restaurant2_website">https://www.facebook.com/holajacoba/</string>
    <string name="city1_restaurant2_description">Situated in the trendy confines of Palermo Soho,
        Hola Jacoba is a highly popular Jewish restaurant.</string>
    <string name="city1_restaurant2_opening_hours">
        Tue &#8211; Fri 19:00 &#8211; 00:00\nTue &#8211; Fri 12:00 &#8211; 00:00
    </string>
    <string name="city1_restaurant2_dining_hours">@string/city1_restaurant2_opening_hours</string>
    <string name="city1_restaurant2_cuisines">
        Jewish|Mediterranean|Middle Eastern|Eastern European
    </string>
    <string-array name="city1_restaurant2_info">
        <item>@string/city1_restaurant2_name</item>
        <item>@string/city1_restaurant2_phone</item>
        <item>@string/city1_restaurant2_price</item>
        <item>@string/city1_restaurant2_rating</item>
        <item>@string/city1_restaurant2_michelin_stars</item>
        <item>@string/city1_restaurant2_address</item>
        <item>@string/city1_restaurant2_neighbourhood</item>
        <item>@string/city1_restaurant2_website</item>
        <item>@string/city1_restaurant2_description</item>
        <item>@string/city1_restaurant2_opening_hours</item>
        <item>@string/city1_restaurant2_dining_hours</item>
        <item>@string/city1_restaurant2_cuisines</item>
    </string-array>
    <string name="city1_restaurant3_name">i Latina</string>
    <string name="city1_restaurant3_phone">+54&#8211;11&#8211;4857&#8211;9095</string>
    <string name="city1_restaurant3_price">4.5</string>
    <string name="city1_restaurant3_rating">4.7</string>
    <string name="city1_restaurant3_michelin_stars">0</string>
    <string name="city1_restaurant3_address">Murillo 725, 1414 Villa Crespo, Distrito Federal</string>
    <string name="city1_restaurant3_neighbourhood">Villa Crespo</string>
    <string name="city1_restaurant3_website">http://www.ilatinabuenosaires.com/</string>
    <string name="city1_restaurant3_description">Since its opening two years ago, i Latina has been
        providing the flavors of Latin America to a curious and sophisticated audience. In a
        beautiful French-style house, in the neighborhood of Villa Crespo 3 Colombian siblings:
        Santiago, Camilo and Laura Macias, launched a project that involves a 7 course tasting menu
        that celebrates the unique and electric tastes of Latin America.</string>
    <string name="city1_restaurant3_opening_hours">
        Tue &#8211; Sat 20:00 &#8211; 01:00
    </string>
    <string name="city1_restaurant3_dining_hours">@string/city1_restaurant3_opening_hours</string>
    <string name="city1_restaurant3_cuisines">Latin|Colombian|South American</string>
    <string-array name="city1_restaurant3_info">
        <item>@string/city1_restaurant3_name</item>
        <item>@string/city1_restaurant3_phone</item>
        <item>@string/city1_restaurant3_price</item>
        <item>@string/city1_restaurant3_rating</item>
        <item>@string/city1_restaurant3_michelin_stars</item>
        <item>@string/city1_restaurant3_address</item>
        <item>@string/city1_restaurant3_neighbourhood</item>
        <item>@string/city1_restaurant3_website</item>
        <item>@string/city1_restaurant3_description</item>
        <item>@string/city1_restaurant3_opening_hours</item>
        <item>@string/city1_restaurant3_dining_hours</item>
        <item>@string/city1_restaurant3_cuisines</item>
    </string-array>
    <string name="city1_restaurant4_name">Burger Joint</string>
    <string name="city1_restaurant4_phone">+54&#8211;11&#8211;4833&#8211;5151</string>
    <string name="city1_restaurant4_price">2.1</string>
    <string name="city1_restaurant4_rating">4.3</string>
    <string name="city1_restaurant4_michelin_stars">0</string>
    <string name="city1_restaurant4_address">Jorge Luis Borges 1776, 1414 Palermo Soho, Distrito Federal</string>
    <string name="city1_restaurant4_neighbourhood">Palermo Soho</string>
    <string name="city1_restaurant4_website">https://www.facebook.com/BurgerJointPalermo</string>
    <string name="city1_restaurant4_description">Since opening in 2013, Burger Joint has a claim to
        have the best burgers in the city. A visit to this Palermo Soho establishment is well worth
        the time.</string>
    <string name="city1_restaurant4_opening_hours">
        Sun &#8211; Sat 12:00 &#8211; 00:00
    </string>
    <string name="city1_restaurant4_dining_hours">@string/city1_restaurant4_opening_hours</string>
    <string name="city1_restaurant4_cuisines">American|Bar|Fast Food</string>
    <string-array name="city1_restaurant4_info">
        <item>@string/city1_restaurant4_name</item>
        <item>@string/city1_restaurant4_phone</item>
        <item>@string/city1_restaurant4_price</item>
        <item>@string/city1_restaurant4_rating</item>
        <item>@string/city1_restaurant4_michelin_stars</item>
        <item>@string/city1_restaurant4_address</item>
        <item>@string/city1_restaurant4_neighbourhood</item>
        <item>@string/city1_restaurant4_website</item>
        <item>@string/city1_restaurant4_description</item>
        <item>@string/city1_restaurant4_opening_hours</item>
        <item>@string/city1_restaurant4_dining_hours</item>
        <item>@string/city1_restaurant4_cuisines</item>
    </string-array>
    <string name="city1_restaurant5_name">Chila</string>
    <string name="city1_restaurant5_phone">+54&#8211;11&#8211;4343&#8211;6067</string>
    <string name="city1_restaurant5_price">4.7</string>
    <string name="city1_restaurant5_rating">4.4</string>
    <string name="city1_restaurant5_michelin_stars">0</string>
    <string name="city1_restaurant5_address">Alicia Moreau de Justo 1160, 1107 Puerto Madero, Distrito Federal</string>
    <string name="city1_restaurant5_neighbourhood">Puerto Madero</string>
    <string name="city1_restaurant5_website">http://www.chilaweb.com.ar/</string>
    <string name="city1_restaurant5_description">Chila opened in 2006 in Puerto Madero, a beautiful, newer
        riverside neighborhood on the modern side of Buenos Aires. It has gorgeous views of the
        Rio de la Plata and serves new Argentinian cuisine.</string>
    <string name="city1_restaurant5_opening_hours">
        Tue &#8211; Sun 20:00 &#8211; 23:00
    </string>
    <string name="city1_restaurant5_dining_hours">@string/city1_restaurant5_opening_hours</string>
    <string name="city1_restaurant5_cuisines">Argentinian|South American|International</string>
    <string-array name="city1_restaurant5_info">
        <item>@string/city1_restaurant5_name</item>
        <item>@string/city1_restaurant5_phone</item>
        <item>@string/city1_restaurant5_price</item>
        <item>@string/city1_restaurant5_rating</item>
        <item>@string/city1_restaurant5_michelin_stars</item>
        <item>@string/city1_restaurant5_address</item>
        <item>@string/city1_restaurant5_neighbourhood</item>
        <item>@string/city1_restaurant5_website</item>
        <item>@string/city1_restaurant5_description</item>
        <item>@string/city1_restaurant5_opening_hours</item>
        <item>@string/city1_restaurant5_dining_hours</item>
        <item>@string/city1_restaurant5_cuisines</item>
    </string-array>
    <string name="city1_hotel1_name">VAIN Boutique Hotel</string>
    <string name="city1_hotel1_phone">+54&#8211;11&#8211;4776&#8211;8246</string>
    <string name="city1_hotel1_price">3.1</string>
    <string name="city1_hotel1_rating">4.1</string>
    <string name="city1_hotel1_class">4</string>
    <string name="city1_hotel1_address">Thames 2226, 1414 Palermo Viejo, Distrito Federal</string>
    <string name="city1_hotel1_neighbourhood">Palermo Viejo</string>
    <string name="city1_hotel1_website">http://www.vainhotel.com/</string>
    <string name="city_images">
        An image of <xliff:g id="city_name" example="London">%d</xliff:g>
    </string>
</resources>